# platform

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSING.md  README.md  RENAME-PLAN.md  SECURITY.md  compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  glama.json  smithery.yaml
.github/workflows/: build-push.yml  ci.yml
cli/: package-lock.json  package.json
cli/src/: api.ts  config.ts  index.ts
cli/src/commands/: agent.ts  auth.ts  classify.ts  graph.ts  kex.ts  source.ts
cli/src/utils/: spinner.ts  table.ts
deploy/: compose-template.yml  hardware.json  install.sh  server-compose.yml  uninstall.sh
docs/: LICENSES.md  buildsummary.md
docs/connectors/: google-drive.md
docs/superpowers/plans/: 2026-03-24-phase1-foundation.md  2026-04-23-phase1-foundation.md  2026-04-23-phase2-license-server.md  2026-04-23-phase3-client-enforcement.md  2026-04-23-phase4-code-protection-cicd.md  2026-04-23-phase5-installer.md
docs/superpowers/specs/: 2026-04-23-gctrl-saas-platform-design.md
harness/: README.md  manifest.json
infrastructure/: Caddyfile  backup.sh  prometheus.yml  restore.sh
n8n-nodes-gctrl/: MIGRATION.md  README.md  package-lock.json  package.json  tsconfig.json
n8n-nodes-gctrl/src/: index.ts
n8n-nodes-gctrl/src/credentials/: BorgHiveApi.credentials.ts  GctrlApi.credentials.ts
n8n-nodes-gctrl/src/shared/: BorgHiveApiClient.ts  GctrlApiClient.ts
scripts/: collective-mind-status.sh  dev-reset.sh  e2e-test.sh  fix-stuck-jobs.sql  mark-migrations-applied.sql  migrate-rdf-namespace.cypher  migrate-rdf-namespace.sh  reset-low-balances.sql  run-e2e.ps1  run-smoke.ps1  seed-default-ontologies.sql  smoke-test.sh  vps-mark-migrations.sql  vps-repair-users.sql  wait-for-stack.sh
sdk/: Cargo.toml
sdk/claude-skill/: README.md  VERIFY.md
sdk/claude-skill/codex/: AGENTS-snippet.md
sdk/claude-skill/cursor/: gctrl.mdc
sdk/claude-skill/gctrl/: SKILL.md
sdk/connector-sdk/: Cargo.toml
sdk/connector-sdk/examples/: file_system.rs
sdk/connector-sdk/src/: client.rs  connector.rs  error.rs  lib.rs  models.rs
security/: authz_redteam.py
services/agent/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/agent-rs/: Cargo.toml  Dockerfile
services/agent-rs/src/: config.rs  credits.rs  docker.rs  error.rs  fingerprint.rs  heartbeat.rs  license.rs  main.rs  server.rs  tuning.rs  usage_queue.rs  version.rs
services/agent/src/: credits.ts  fingerprint.ts  (+5 more)
services/api/: package-lock.json  package.json
services/api-rs/: Cargo.toml  Dockerfile
services/api-rs/migrations/: 001_users.sql  007_ontologies.sql  008_active_learning.sql  009_kg_folders.sql  010_connectors.sql  011_connector_configs.sql  012_job_batches.sql  013_triggers.sql  014_users_default_ontology.sql  015_licenses.sql  016_conversations.sql  017_enum_to_text.sql  018_text_chunks.sql  019_ontology_scope_to_text.sql  020_license_jwt.sql  021_jobs_type_fix.sql  022_microsoft_connector.sql  023_obsidian_connector.sql  024_classification_levels.sql  025_audit_log_enhanced.sql  026_api_key_clearance.sql  027_pii_log.sql  028_retention_policies.sql  029_sso.sql  030_webhooks.sql  031_scim_owner_scope.sql  032_oidc_states.sql  033_access_core.sql  034_oidc_nonce.sql  035_api_key_level.sql  036_canonical_default_ontology.sql  037_obsidian_folder.sql  038_secret_vault.sql  039_llm_providers.sql  040_obsidian_triggers.sql  041_user_active.sql  042_skills.sql  043_service_overrides.sql  044_knowledge_corrections.sql  045_compilation_type.sql  (+28 more)
services/api-rs/src/: config.rs  db.rs  error.rs  main.rs
services/api-rs/src/background/: guardrail.rs  mod.rs
services/api-rs/src/middleware/: auth.rs
services/api-rs/src/models/: mod.rs
services/api-rs/src/routes/: admin.rs  agent.rs  agent_gateway.rs  api_keys.rs  audit.rs  auth.rs  billing.rs  classification.rs  config.rs  connector_configs.rs  connectors.rs  crawler.rs  discovery.rs  fuse.rs  health.rs  infra.rs  kex.rs  kg.rs  llm.rs  llm_gateway.rs  memory.rs  mod.rs  ontologies.rs  profile.rs  rag.rs  setup.rs  skills.rs  sso.rs  triggers.rs  update.rs  users.rs  webhooks.rs
services/api-rs/src/services/: audit.rs  classify_resolver.rs  cron.rs  crypto.rs  llm.rs  mod.rs  neo4j.rs  obsidian.rs  privacy.rs  redis.rs  source_docs.rs  telemetry.rs  usage.rs
services/fuse/: Dockerfile  requirements.txt
services/fusion-engine/: Dockerfile  README.md
services/kex/: Dockerfile  requirements.txt
services/license-api/: Dockerfile  package-lock.json  package.json
services/mcp/: README.md  package-lock.json  package.json  server.json
services/portal/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
services/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
vaults/test-vault/: acme.md  beta.md
(+369 files in other folders)
