[package]
name = "gctrl-connector-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building GCTRL knowledge graph connectors"
license = "MIT"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "file_system"
path = "examples/file_system.rs"
