[package]
name    = "gctrl-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gctrl-agent"
path = "src/main.rs"

[dependencies]
axum          = "0.7"
tokio         = { version = "1", features = ["full"] }
tower-http    = { version = "0.5", features = ["cors"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
jsonwebtoken  = "9"
reqwest       = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2          = "0.10"
hex           = "0.4"
sysinfo       = "0.30"
chrono        = { version = "0.4", features = ["serde"] }
dotenvy       = "0.15"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror     = "1"

[profile.release]
opt-level = 3
lto       = true
strip     = true
