[package]
name    = "gctrl-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gctrl-api"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["multipart"] }
axum-extra      = { version = "0.9", features = ["typed-header"] }
tokio           = { version = "1", features = ["full"] }
tower           = "0.4"
tower-http      = { version = "0.5", features = ["cors", "limit"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
sqlx            = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
uuid            = { version = "1", features = ["serde", "v4"] }
chrono          = { version = "0.4", features = ["serde"] }
jsonwebtoken    = "9"
bcrypt          = "0.15"
redis           = { version = "0.25", features = ["tokio-comp", "aio"] }
neo4rs          = "0.7"
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy         = "0.15"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror       = "1"
bytes           = "1"
base64          = "0.22"
futures         = "0.3"
async-stream    = "0.3"

[profile.release]
opt-level = 3
lto       = true
strip     = true
